--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <p class="titletext"><b>РОЗРАХУНОК:</b><i> Безготівковий</i></p>
     </div>
     </div>
+    <div class="flex-contaner">
     </div>
+</div>
+
+
 </body>
 </html>
