--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     </div>
     </div>
     <div class="flex-contaner">
+        <div class="blockLeft">
+            <div class="blockOne"><img src="alb01.png"></div>
+            <div class="blockHalf"><img src="alb02.png"></div>
+            <div class="blockHalf"><img src="alb03.png"></div>
+            <div class="blockOne"><img  src="alb04.png"></div>
+        </div>
+        <div class="blockRight">
+            <div class="blockOneHeight"><img src="alb05.png"></div>
+            <div class="blockHeight"><img src="alb06.png"></div>
+        </div>
+
+
     </div>
 </div>
 
